alignment issue fixed

--- a/server-monitoring/src/app/environment/configure/configuration-settings/configuration-settings.component.scss
+++ b/server-monitoring/src/app/environment/configure/configuration-settings/configuration-settings.component.scss
@@ -9,7 +9,7 @@
     .selection-right {
         width: calc(100% - 24rem);
         padding: 0rem 1rem;
-        height: calc(100vh - 10.6rem);
+        height: calc(100vh - 10.4rem);
         overflow: auto;
     }
 }
